# LaOne_test

./: .gitattributes  .gitignore  LaOne_test.ipynb  README.md  REPORT.md  classification_demo.ipynb  la_one_test.ipynb  main.py  pyproject.toml  requirements.txt
data/processed/: dataset.parquet
src/: settings.py
src/data/: extract_embeddings.py  load.py  preprocess.py
src/features/: cluster.py  settings.py  tabular.py  visual.py
src/models/: train_model.py  train_models.py  train_tabular.py  train_visual.py
